# CSI5155

assignment1/: .gitignore  README.md  REPORT.md  analysis.ipynb  analysis.py  as1.ipynb  as1.md  best_model.pkl  collect_results.py  comprehensive_evaluation_results.json  dataset_quick_analysis.ipynb  dt.ipynb  evaluate_all_models.py  evaluate_model.py  five_fold_eval.py  five_fold_results.json  gb.ipynb  generate_figures.py  knn.ipynb  lr.ipynb  main.py  model_info.json  pipeline.py  preprocessing.py  pyproject.toml  rf.ipynb  run_all_tuning.py  sampling.py  split_data.py  summary.csv  svm.ipynb  test_evaluation_results.json  train_final_model.py  tune_hyperparameters.py  tune_model.py  tuning.py  tuning_results.json  utils.py
assignment1/data/: test_features.csv  test_target.csv  train_features.csv  train_target.csv  val_features.csv  val_target.csv
assignment1/figure_scripts/: __init__.py  common_utils.py  generate_confusion_matrices.py  generate_dataset_analysis.py  generate_engineered_features_analysis.py  generate_roc_curves.py  theme_config.py
assignment1/models/: __init__.py  collect_results.py  decision_tree.py  gradient_boosting.py  knn.py  logistic_regression.py  random_forest.py  run_all.py  svm.py  train_dt.py  train_gb.py  train_knn.py  train_lr.py  train_rf.py  train_svm.py  utils.py
assignment2/: .gitignore  AS2.md  Makefile  PRESENTATION_ORDER.md  REPORT.md  REPORT_v1.md  baseline.json  baseline.py  data_utils.py  download_dataset.py  pca_analysis.py  pyproject.toml
assignment2/lib/: data_utils.py  plot_utils.py  semi_supervised_utils.py
assignment2/scripts/: baseline_svm.py  data_download.py  label_propagation.py  pca_analysis.py  plot_results.py  self_training.py  validate_report.py
project/: .gitignore  ALEX.md  PLAN.md  PROPOSAL.MD  README.md  SVM.md  archive.sh  device.py  extract.sh  main.py  metrics.txt  paths.py  pyproject.toml  setup_offline.sh
project/alexnet/: eval.py  info.py  model.py  train.py
project/analysis/: __init__.py  mcnemar.py
project/common_net/: __init__.py  evaluation.py  training.py
project/data/: __init__.py  datasets.py  download.py  explorer.py  process.py
project/models/: classifier_svm.py
project/svm/: eval.py  (+13 more)
(+68 files in other folders)
