[project]
name = "project"
version = "0.1.0"
description = "CSI 5155 Project: From Classical CV to Double Descent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.4.1",
    "fastapi>=0.121.1",
    "matplotlib>=3.10.7",
    "mlxtend>=0.23.4",
    "numba>=0.62.1",
    "optuna>=4.5.0",
    "ruff>=0.14.4",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.38.0",
]
